--- a/public/index.html
+++ b/public/index.html
@@ -37,19 +37,20 @@
 
         <!-- Menu Bar -->
         <div class="menu-bar">
-            <div class="menu-item">File</div>
             <div class="menu-item" id="change-nickname-btn">Change Nickname</div>
-            <div class="menu-item">Friend</div>
-            <div class="menu-item">Format</div>
             <div class="menu-item" id="create-circle-btn">Create/Share Circle</div>
-            <div class="menu-item">Extra Toys</div>
-            <div class="menu-item">Help</div>
+            <div class="menu-item" id="about-btn">mooncafe.space/About</div>
+            <div class="menu-item" id="collaborate-btn">Collaborate</div>
+            <a href="https://github.com/your-repo/mooncafe.space" target="_blank" class="menu-item github-link">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>
+            </a>
         </div>
 
         <!-- Content Area -->
         <div class="content-area">
             <!-- Left: Chat Pane -->
             <div class="chat-pane">
+                <div id="user-list-toggle-btn" class="user-list-toggle-desktop">&gt;&gt;</div>
                 <div class="messages" id="message-container">
                     <!-- Messages will be loaded here -->
                 </div>
@@ -92,14 +93,6 @@
             <div class="bottom-controls">
                 <div class="mini-buttons">
                     <button class="mini-btn" id="join-room-btn-open">ChangeRoom</button>
-                    <button class="mini-btn">Find</button>
-                    <button class="mini-btn">Buddies</button>
-                    <button class="mini-btn">Gossip</button>
-                    <button class="mini-btn">Ignore</button>
-                    <button class="mini-btn">Filter</button>
-                    <button class="mini-btn">Symbols</button>
-                    <button class="mini-btn">Profile</button>
-                    <button class="mini-btn">PM</button>
                 </div>
                 <div class="message-controls">
                     <input type="text" id="message-input" placeholder="Say something...">
@@ -183,6 +176,44 @@
         <div data-action="pm">Private Message</div>
         <div data-action="profile">View Profile</div>
         <div data-action="ignore">Ignore</div>
+    </div>
+
+    <!-- About Modal -->
+    <div class="modal-overlay" id="about-modal">
+        <div class="modal">
+            <div class="modal-titlebar">
+                <span>About mooncafe.space</span>
+                <button class="modal-close-btn" data-target-modal="about-modal">&times;</button>
+            </div>
+            <div class="modal-content">
+                <h3>The Story of mooncafe.space</h3>
+                <p>
+                    This is a placeholder for the story behind the creation of this chat application. 
+                    It was built to bring back the feeling of old-school, anonymous chatrooms from the early 2000s.
+                    A place for strangers to connect and just talk, without the baggage of profiles, history, or algorithms.
+                </p>
+                <p>
+                    Enjoy your stay in the café.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Collaborate Modal -->
+    <div class="modal-overlay" id="collaborate-modal">
+        <div class="modal">
+            <div class="modal-titlebar">
+                <span>Collaborate</span>
+                <button class="modal-close-btn" data-target-modal="collaborate-modal">&times;</button>
+            </div>
+            <div class="modal-content">
+                <h3>Interested in collaborating on mooncafe.space?</h3>
+                <p>
+                    Contact us at: <a href="mailto:collab@mooncafe.space">collab@mooncafe.space</a>
+                </p>
+                <button class="modal-close-btn" data-target-modal="collaborate-modal">Close</button>
+            </div>
+        </div>
     </div>
     
     <script src="/socket.io/socket.io.js"></script>
