--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
 
         <!-- Menu Bar -->
         <div class="menu-bar">
+            <div id="current-user-session" style="display: none;"></div>
             <div class="menu-item" id="change-nickname-btn">Change Nickname</div>
             <div class="menu-item" id="create-circle-btn">Create/Share Circle</div>
             <div class="menu-item" id="about-btn">mooncafe.space/About</div>
@@ -67,6 +68,7 @@
 
         <!-- Bottom Control Bar -->
         <div class="control-bar">
+            <div id="reply-indicator"></div>
             <div class="top-controls">
                 <div class="font-controls">
                     <span>Name</span>
