--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mooncafe.space</title>
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,12 +28,13 @@
         <!-- Title Bar -->
         <div class="title-bar">
             <div class="app-name">
-                <svg viewBox="0 0 100 100">
+            <i class="ri-contrast-2-line"></i>
+                <!-- <svg viewBox="0 0 100 100">
                     <path class="cup" d="M10 30 H 80 C 90 30, 95 40, 95 50 C 95 60, 90 70, 80 70 H 10 Z"></path>
                     <path class="steam" d="M30 25 Q 35 15, 40 25"></path>
                     <path class="steam" d="M45 20 Q 50 10, 55 20"></path>
                     <path class="steam" d="M60 25 Q 65 15, 70 25"></path>
-                </svg>
+                </svg> -->
                 mooncafe.space
             </div>
             <div class="status-time" id="status-time">12:00 PM</div>
@@ -51,7 +56,7 @@
         <div class="content-area">
             <!-- Left: Chat Pane -->
             <div class="chat-pane">
-                <div id="user-list-toggle-btn" class="user-list-toggle-desktop">&gt;&gt;</div>
+                <div id="user-list-toggle-btn" class="user-list-toggle-desktop">❒</div>
                 <div class="messages" id="message-container">
                     <!-- Messages will be loaded here -->
                 </div>
