fix(seo): update social media titles to match page title
- Updated Open Graph (og:title) and Twitter Card (twitter:title) titles to be consistent with the main page title.

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mooncafé.space - Grab your coffee and enjoy : )</title>
+    <title>mooncafé.space</title>
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="A small, old-school café on the internet where conversations come and go like passing clouds. Join mooncafé.space for anonymous, ephemeral, and private chat without accounts or history.">
@@ -14,14 +14,14 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.mooncafe.site/">
-    <meta property="og:title" content="mooncafé.space - Grab your coffee and enjoy : )">
+    <meta property="og:title" content="mooncafé.space">
     <meta property="og:description" content="A small, old-school café on the internet where conversations come and go like passing clouds.">
     <meta property="og:image" content="https://raw.githubusercontent.com/ayahack89/mooncafe.space/main/chat-room-previews/chat-room-pic-one.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.mooncafe.site/">
-    <meta property="twitter:title" content="mooncafé.space - Grab your coffee and enjoy : )">
+    <meta property="twitter:title" content="mooncafé.space">
     <meta property="twitter:description" content="A small, old-school café on the internet where conversations come and go like passing clouds.">
     <meta property="twitter:image" content="https://raw.githubusercontent.com/ayahack89/mooncafe.space/main/chat-room-previews/chat-room-pic-one.jpg">
 
