--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
             <input type="text" id="flair-input" placeholder="Optional flair" maxlength="25">
             
             <button id="enter-button">Enter the café</button>
-            <p style="margin-top: 10px; font-size: 1px; color: #024cba;">No accounts, no history. Just strangers chatting.</p>
+            <p style="margin-top: 10px; color: #024cba;">No accounts, no history. Just strangers chatting.</p>
         </div>
     </div>
 
